--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,8 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+
+# pip python
 setup.cfg
 setup.py
 
@@ -39,6 +41,8 @@ setup.py
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
+
+.buildconfig
 
 # Installer logs
 pip-log.txt
